# rust-challenge

./: Cargo.toml  README.md  rust_challenge.json
scripts/: create_tables.sh  drop_tables.sh
src/: generator.rs  main.rs  model.rs  pipeline.rs  storage.rs  test.rs
