[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = {version="1.0"}
anyhow = "1.0"
chrono = "0.4"
clickhouse = {"version"="0.13.3", features = ["inserter"]}
tokio = {"version"= "^1.45.1", features = ["rt-multi-thread"]}

[dev-dependencies]
clickhouse = { version = "0.13.3", features = ["test-util", "inserter"] }
